[package]
name = "blackjack-bot-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.12"
strum = { version = "0.26", features = ["derive"] }
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio"] }
dotenvy = "0.15"
chrono = "0.4"
